<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">City of Assassins</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>
    <string name="action_profile">Profile</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_ranking">Profile</string>
    <string name="login_activity_title_label_1">City of</string>
    <string name="login_activity_title_label_2">Assassins</string>
    <string name="login_activity_hint_email">Enter email</string>
    <string name="login_activity_hint_password">Enter password</string>
    <string name="login_activity_button_login">Login</string>
    <string name="login_activity_button_sign_up">Sign up</string>
    <string name="register_activity_hint_name">Name</string>
    <string name="register_activity_hint_email">Email</string>
    <string name="register_activity_hint_password">Password</string>
    <string name="register_activity_hint_pass_confirm">Re-type password</string>
    <string name="register_activity_button_sign_up">Sign up</string>
    <string name="main_activity_button_log_out">Log out</string>
    <string name="title_activity_maps">Map</string>
    <string name="profile_username">Your Name</string>
    <string name="profile_email">Your Email</string>
    <string name="profile_statistics">Statistics</string>
    <string name="profile_kills">Kills</string>
    <string name="profile_deaths">Deaths</string>
    <string name="profile_k_d_ratio">K/D ratio</string>
    <string name="profile_bonusToKill">Bonus to kill</string>
    <string name="profile_bonusToSurvive">Bonus to survive</string>
    <string name="profile_number_deaths">0</string>
    <string name="profile_number_kills">0</string>
    <string name="profile_number_bonus_kill">0</string>
    <string name="profile_number_bonus_survive">0</string>
    <string name="profile_number_k_d">0</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="profile_equipment">Equipment</string>
    <string name="profile_armour">Armour</string>
    <string name="profile_weapon">Weapon</string>
    <string name="armour_pic">Equipped Armour</string>
    <string name="weapon_pic">Equipped Weapon</string>
    <string name="assassinate_button">Assassinate Target</string>
    <string name="action_get_target">Get Target</string>
    <string name="title_take_pic">Take picture</string>
    <string name="collect_item">Collect item</string>
    <string name="description_picture">Connect the phone to the hub to take a picture</string>
    <string name="description_item">Connect the phone to the hub to pic up item</string>
    <string name="nfc_label">Connect the phone to the hub to take a picture</string>
    <string name="aBonusKill">0</string>
    <string name="aBonusSurv">0</string>
    <string name="wBonusKill">0</string>
    <string name="wBonusSurv">0</string>
    <string name="action_ranking">Ranking</string>
    <string name="allRankText1"></string>
    <string name="allRankText2"></string>
    <string name="allRankText3"></string>
    <string name="allRankText4"></string>
    <string name="allRankText5"></string>
    <string name="allRankNum1"></string>
    <string name="allRankNum2"></string>
    <string name="allRankNum3"></string>
    <string name="allRankNum4"></string>
    <string name="allRankNum5"></string>
    <string name="friendRankText1">You have no friends/your friends have no rank</string>
    <string name="friendRankText2"></string>
    <string name="friendRankText3"></string>
    <string name="friendRankNum1"></string>
    <string name="friendRankNum2"></string>
    <string name="friendRankNum3"></string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="change_password_button">Change Password</string>
    <string name="current_password">Current password</string>
    <string name="forgot_password"><u>Forgot your password?</u></string>
    <string name="title_activity_forgot_password">Send new password</string>
    <string name="send_new_password">Send new password</string>
    <string name="enter_email">Enter Your e-mail</string>
    <string name="new_password_description">A new auto-generated password will be sent to Your e-mail</string>
    <string name="new_item">New item</string>
    <string name="old_item">Old item</string>
    <string name="collect_item_text">Click on the item you want to keep</string>
    <string name="action_friends">Friends</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="menu_activity_view_friends_button">Friends</string>
    <string name="title_activity_friend">FriendActivity</string>
    <string name="add_friend_text">Enter a Name</string>
    <string name="button_send_friend_request">Send</string>
    <string name="button_accept_friend_request">Accept</string>
    <string name="button_deny_friend_request">Deny</string>
    <string name="hello_world">Hello world!</string>

</resources>
