<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:screenOrientation="portrait"
    tools:context="com.naegling.assassins.RegisterActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/cityscape" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login_activity_title_label_1"
        android:id="@+id/textView"
        android:gravity="center_horizontal"
        android:layout_alignBottom="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:textSize="25dp"
        android:typeface="serif" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login_activity_title_label_2"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:textColor="#ff0000"
        android:typeface="serif"
        android:textIsSelectable="false"
        android:textSize="40dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/registerName"
            android:hint="@string/register_activity_hint_name" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/registerEmail"
            android:hint="@string/register_activity_hint_email" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/registerPassword"
            android:hint="@string/register_activity_hint_password" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/registerConfirmPassword"
            android:hint="@string/register_activity_hint_pass_confirm" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_activity_button_sign_up"
            android:id="@+id/btnRegister"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:padding="20dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/assassinate_button" />
    </LinearLayout>

</RelativeLayout>